tests/baselines/reference/generatorInAmbientContext3.d.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorInAmbientContext3.d.ts(2,5): error TS1221: Generators are not allowed in an ambient context.


==== tests/cases/conformance/es6/yieldExpressions/generatorInAmbientContext3.d.ts (1 errors) ====
    declare class C {
        *generator(): any;
        ~
!!! error TS1221: Generators are not allowed in an ambient context.
    }